Replace all hardcoded media queries using a resusable declaration

--- a/packages/website/src/components/layout.css
+++ b/packages/website/src/components/layout.css
@@ -11,6 +11,7 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  word-break: break-word;
 }
 a:active,
 a:hover {
