--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,10 +1,13 @@
 ---
-interface Props {
+import Header, { type Props as HeaderProps } from '../components/Header.astro'
+
+export interface Props {
   title: string;
+  hero?: HeaderProps['hero']
 }
 
 const mainTitle = 'Marco Montalbano'
-const { title } = Astro.props;
+const { title, hero } = Astro.props;
 ---
 
 <!doctype html>
@@ -21,26 +24,35 @@ const { title } = Astro.props;
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&amp;family=Spinnaker&amp;display=swap" rel="stylesheet">
   </head>
   <body>
+    <Header hero={hero} />
     <div class="container">
-      <header class="flex items-center gap-8 h-16">
-        <div class="grow">
-          <a href="/" class="font-title text-3xl p-2">Marco Montalbano</a>
-        </div>
-        <div class="flex text-lg gap-8">
-          <a href="https://github.com/marcomontalbano" class="p-2">GitHub</a>
-          <a href="https://cv.marcomontalbano.com" class="p-2">CV</a>
-        </div>
-      </header>
       <slot />
     </div>
   </body>
 </html>
 
 <style is:global>
-  html {
-    @apply text-brand-dark mb-8;
+  @tailwind base;
+
+  @layer base {
+    :root {
+      --brand-light: #e2e4e8;
+      --brand-primary: #091729;
+      --brand-dark-primary: #1f2428;
+      --brand-link: #559cd0;
+    }
+  }
+  body {
+    @apply mb-10 text-brand-primary dark:text-brand-light bg-white dark:bg-brand-dark-primary;
+  }
+  main {
+    @apply mt-8;
   }
   code {
     @apply text-sm;
+  }
+
+  img {
+    @apply rounded;
   }
 </style>
