feat: parse mp4 video from markdown

--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -51,6 +51,9 @@ const title = headings.find(h => h.depth === 1)?.text ?? project.slug
         @apply bg-transparent p-0;
       }
     }
+    video {
+      @apply w-full !max-h-full;
+    }
     ul {
       @apply px-8;
 
