--- a/packages/website/src/pages/index.astro
+++ b/packages/website/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import { getCollection } from 'astro:content'
-import { Image } from 'astro:assets'
+import Card from '../components/Card.astro'
 
-const projects = (await getCollection('projects', ))
-  .sort((a, b) => a.data.createdAt > b.data.createdAt ? -1 : 0)
+const projects = (await getCollection('project'))
+  .sort((a, b) => b.data.createdAt.valueOf() - a.data.createdAt.valueOf())
 ---
 
 <Layout title="Marco Montalbano">
@@ -12,15 +12,12 @@ const projects = (await getCollection('projects', ))
     {
       projects.map(async project => {
         const { headings } = await project.render()
-        const title = headings.find(h => h.depth === 1)?.text ?? project.slug
         return (
-          <section class="grow shrink basis-1/4">
-            <a href={`/project/${project.slug}`}>
-              <Image src={project.data.cover} alt={title} class="rounded-md" width={1920} height={928} loading='eager' />
-              <div class="font-bold mt-4 my-2">{title}</div>
-              <div class="line-clamp-2">{project.data.description}</div>
-            </a>
-          </section>
+          <Card
+            title={headings.find(h => h.depth === 1)?.text ?? project.slug}
+            description={project.data.description}
+            cover={project.data.cover}
+            href={`/project/${project.slug}`} />
         )
       })
     }
