--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro'
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('projects');
+  const blogEntries = await getCollection('project');
   return blogEntries.map(entry => ({
     params: { slug: entry.slug }, props: { entry },
   }));
@@ -29,9 +29,9 @@ const title = headings.find(h => h.depth === 1)?.text ?? project.slug
   </main>
 </Layout>
 
-<style is:global>
+<style>
   main {
-    h1 { @apply font-semibold text-3xl mt-8 mb-4 hidden; }
+    h1 { @apply hidden font-semibold text-3xl mt-8 mb-4; }
     h2 { @apply font-semibold text-2xl mt-6 mb-3; }
     h3 { @apply font-semibold text-xl mt-4 mb-2; }
     h4 { @apply font-semibold text-lg mt-4 mb-1; }
@@ -42,7 +42,8 @@ const title = headings.find(h => h.depth === 1)?.text ?? project.slug
       @apply my-2;
     }
     code {
-      @apply rounded bg-slate-100 text-slate-500 py-1 px-2 break-all;
+      @apply rounded py-1 px-2 break-all;
+      @apply bg-slate-100 text-slate-500 dark:bg-[#24292e] dark:text-slate-400;
     }
     pre.astro-code {
       @apply p-4 rounded-md my-2;
