--- a/packages/website/src/components/Navigation.astro
+++ b/packages/website/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import cn from 'classNames'
+import cn from 'classnames'
 import type { Props as LayoutProps } from '../layouts/Layout.astro'
 
 interface Props {
