--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -42,6 +42,9 @@ const title = headings.find(h => h.depth === 1)?.text ?? project.slug
     p {
       @apply my-2;
     }
+    hr {
+      @apply my-4;
+    }
     code {
       @apply rounded py-1 px-2 break-all;
       @apply bg-slate-100 text-slate-500 dark:bg-[#24292e] dark:text-slate-400;
