fix: octicon behind the header

--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -118,6 +118,7 @@ const title = headings.find(h => h.depth === 1)?.text ?? project.slug
             mask: var(--oct-icon) no-repeat;
             -webkit-mask-size: 100% 100%;
             mask-size: 100% 100%;
+            z-index: -1;
             background-color: currentColor;
             color: inherit;
             display: inline-block;
