deps: update all dependencies to the latest major

--- a/packages/website/src/pages/index.astro
+++ b/packages/website/src/pages/index.astro
@@ -17,7 +17,7 @@ const projects = (await getCollection('project'))
             title={headings.find(h => h.depth === 1)?.text ?? project.slug}
             description={project.data.description}
             cover={project.data.cover}
-            href={`/project/${project.slug}`} />
+            href={`/project/${project.slug}/`} />
         )
       })
     }
