--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,21 +1,23 @@
 ---
-import { getImage } from 'astro:assets'
-import SimpleAnalytics from '../components/SimpleAnalytics.astro'
-import Header, { type Props as HeaderProps } from '../components/Header.astro'
-import defaultCoverImage from '../images/marcomontalbano.png'
+import { getImage } from 'astro:assets';
+import SimpleAnalytics from '../components/SimpleAnalytics.astro';
+import Header, { type Props as HeaderProps } from '../components/Header.astro';
+import defaultCoverImage from '../images/marcomontalbano.png';
 
 export interface Props {
-  title: string
-  description?: string
-  hero?: HeaderProps['hero']
+  title: string;
+  description?: string;
+  hero?: HeaderProps['hero'];
 }
 
-const mainTitle = 'Marco Montalbano'
+const mainTitle = 'Marco Montalbano';
 const { title, description, hero } = Astro.props;
 
-const websiteTitle = `${title != mainTitle ? `${title} - ` : ''}${mainTitle}`
-const websiteDescription = description ?? "Hi everyone, my name is Marco Montalbano and I'm a web developer. On this site you can discover more about me, my projects, my work and my cv."
-const websiteImage = (await getImage({ src: hero?.img ?? defaultCoverImage, width: 1920, height: 928 })).src
+const websiteTitle = `${title != mainTitle ? `${title} - ` : ''}${mainTitle}`;
+const websiteDescription =
+  description ??
+  "Hi everyone, my name is Marco Montalbano and I'm a web developer. On this site you can discover more about me, my projects, my work and my cv.";
+const websiteImage = (await getImage({ src: hero?.img ?? defaultCoverImage, width: 1920, height: 928 })).src;
 ---
 
 <!doctype html>
@@ -25,21 +27,21 @@ const websiteImage = (await getImage({ src: hero?.img ?? defaultCoverImage, widt
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{websiteTitle}</title>
-    <meta name="description" content={websiteDescription}>
-    <meta property="og:title" content={websiteTitle}>
-    <meta property="og:description" content={websiteDescription}>
-    <meta property="og:image" content={`${Astro.site}${websiteImage.replace(/^\//, '')}`}>
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    {
-      hero == null && (
-        <meta name="twitter:title" content="Hi everyone, my name is Marco and I'm a web developer.">
-      )
-    }
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&amp;family=Spinnaker&amp;display=swap" rel="stylesheet">
+    <meta name="description" content={websiteDescription} />
+    <meta property="og:title" content={websiteTitle} />
+    <meta property="og:description" content={websiteDescription} />
+    <meta property="og:image" content={`${Astro.site}${websiteImage.replace(/^\//, '')}`} />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    {hero == null && <meta name="twitter:title" content="Hi everyone, my name is Marco and I'm a web developer." />}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Spinnaker&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <Header hero={hero} />
