--- a/packages/website/src/components/Navigation.astro
+++ b/packages/website/src/components/Navigation.astro
@@ -1,12 +1,14 @@
 ---
-import cn from 'classnames'
-import type { Props as LayoutProps } from '../layouts/Layout.astro'
+import cn from 'classnames';
+import type { Props as LayoutProps } from '../layouts/Layout.astro';
 
 interface Props {
-  hero?: LayoutProps['hero']
+  hero?: LayoutProps['hero'];
 }
 
 const { hero } = Astro.props;
+
+const TitleElement = hero == null ? 'h1' : 'div';
 ---
 
 <header
@@ -17,13 +19,15 @@ const { hero } = Astro.props;
   <div class="container">
     <nav class="flex items-center gap-4 h-20">
       <div class="grow">
-        <a href="/" class="font-title text-xl md:text-3xl flex items-center gap-3 md:gap-4">
-          <img
-            class="rounded-full w-6 h-6 md:w-8 md:h-8"
-            alt="Marco Montalbano"
-            src="https://avatars.githubusercontent.com/u/1681269"
-          />
-          Marco Montalbano
+        <a href="/">
+          <TitleElement class="font-title text-xl md:text-3xl flex items-center gap-3 md:gap-4">
+            <img
+              class="rounded-full w-6 h-6 md:w-8 md:h-8"
+              alt="Marco Montalbano"
+              src="https://avatars.githubusercontent.com/u/1681269"
+            />
+            Marco Montalbano
+          </TitleElement>
         </a>
       </div>
       <div class="flex md:text-lg gap-6 md:gap-8 items-center">
