chore: rounded video

--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -85,7 +85,7 @@ const ldJson: WithContext<CreativeWork> = {
       }
     }
     video {
-      @apply w-full !max-h-full;
+      @apply w-full !max-h-full rounded;
     }
     ul {
       @apply px-8;
