fix: header below the video

--- a/packages/website/src/components/Header.astro
+++ b/packages/website/src/components/Header.astro
@@ -20,7 +20,7 @@ const { hero } = Astro.props;
   hero == null ? (
     <Navigation />
   ) : (
-    <div class="hero text-white sticky">
+    <div class="hero text-white sticky z-10">
       <img
         class="image"
         alt={hero.title}
