--- a/packages/website/src/pages/project/[...slug].astro
+++ b/packages/website/src/pages/project/[...slug].astro
@@ -48,6 +48,8 @@ const ldJson: WithContext<CreativeWork> = {
 </Layout>
 
 <style>
+  @reference "../../styles/global.css";
+
   main {
     h1 {
       @apply hidden font-semibold text-3xl mt-10 mb-4;
