--- a/packages/website/src/components/Navigation.astro
+++ b/packages/website/src/components/Navigation.astro
@@ -36,7 +36,7 @@ const TitleElement = hero == null ? 'h1' : 'div';
       </div>
       <div class="flex md:text-lg gap-6 md:gap-8 items-center">
         <a href="https://github.com/marcomontalbano">GitHub</a>
-        <a href="https://cv.marcomontalbano.com">CV</a>
+        <a href="https://marcomontalbano.com/cv/cv-marco-montalbano.pdf">CV</a>
       </div>
     </nav>
   </div>
